<resources>
    <string name="app_name">Velociraptor</string>

    <!--Generic-->
    <string name="configure">Configure</string>
    <string name="done">Done</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="dismiss">Dismiss</string>
    <string name="kmph">%s km/h</string>
    <string name="mph">%s mph</string>
    <string name="percent">%s%%</string>
    <string name="grant">Grant</string>

    <string name="notif_content">Touch to open settings</string>
    <string name="notif_title">Velociraptor is running</string>

    <!--Permission Settings-->
    <string name="open_settings_page">Open settings page</string>
    <string name="enable_floating_desc">Allow Velociraptor to display over map apps</string>
    <string name="open_settings_failed_overlay">Unable to open settings. Please manually enable the \"Draw Over Other Apps\" setting for Velociraptor.</string>

    <string name="enable_accessibility_service">Turn on Accessibility Service</string>
    <string name="enable_accessibility_service_desc">Allow Velociraptor to launch automatically in map apps</string>
    <string name="enable_notifications">Allow notifications</string>
    <string name="enable_notifications_desc">Allow Velociraptor to show a notification</string>
    <string name="accessibility_service_summary">Auto-launch in map apps</string>
    <string name="accessibility_service_description">Allow Velociraptor to detect the foreground app and launch automatically.\n\nVelociraptor does not use any information other than the foreground app info.</string>
    <string name="open_settings_failed_accessibility">Unable to open settings. Please manually enable the Accessibility Service setting for Velociraptor.</string>

    <string name="grant_permission">Grant permission</string>
    <string name="enable_location_desc">Allow Velociraptor to access your location</string>

    <string name="warning_notif_title">Velociraptor can\'t start</string>
    <string name="permissions_warning">Velociraptor doesn\'t have location permissions - open the app to grant them</string>
    <string name="location_settings_warning">GPS isn\'t turned on</string>
    <string name="network_warning">No network connection</string>

    <string name="troubleshoot_label">Not automatically launching?</string>
    <string name="troubleshoot">Troubleshoot</string>

    <!--General Settings-->
    <string name="general">General</string>

    <string name="show_limits">Speed limits</string>
    <string name="show_speedometer">Speedometer</string>

    <string name="sound_alert">Sound alert</string>
    <string name="test">Test</string>

    <string name="speed_unit">Speed units</string>

    <string name="style">Style</string>
    <string name="united_states">United States</string>
    <string name="international">International</string>

    <string name="size">Size</string>
    <string name="size_limit_overview">Speed Limit: %s</string>
    <string name="size_speedometer_overview">Speedometer: %s</string>
    <string name="size_limit_text">Speed Limit</string>
    <string name="size_speedometer_text">Speedometer</string>

    <string name="transparency">Opacity</string>

    <string name="speeding_amount">Speeding tolerance</string>
    <string name="tolerance_dialog_text">Warn when speed limit exceeded by:</string>
    <string name="plus">plus</string>
    <string name="or">or</string>
    <string name="tolerance_desc">%1$s %2$s %3$s</string>

    <string name="tip_tap_hide">Tip: Tap the sign to temporarily hide it!</string>

    <!--About Dialog-->
    <string name="about">About</string>
    <string name="about_dialog_title">Velociraptor v%s</string>
    <string name="about_body"><![CDATA[
        <b>Velociraptor</b> is a floating speed limit monitor with speedometer and warning features.
        <br/><br/>

        Developed by <b>Daniel Ciao</b><br/>

        <a href="http://pluscubed.com">Website</a>&nbsp;&nbsp;
        <a href="mailto:pluscubed@gmail.com">Email</a>&nbsp;&nbsp;
        <a href="https://twitter.com/plusCubed">Twitter</a>&nbsp;&nbsp;
        <a href="https://github.com/pluscubed">GitHub</a>&nbsp;&nbsp;
        <a href="https://www.linkedin.com/in/dciao">LinkedIn</a><br/><br/>

        <a href="https://play.google.com/store/apps/details?id=com.pluscubed.velociraptor">Rate on the Play Store!</a><br/><br/>

        <a href="https://github.com/pluscubed/velociraptor">GitHub</a> - source, issues, feature requests<br/>
        <a href="http://pluscubed.oneskyapp.com/collaboration/project/64120">OneSky</a> - translate the app to your language<br/>
        <a href="https://play.google.com/apps/testing/com.pluscubed.velociraptor">Beta testing</a> - try out upcoming releases
    ]]></string>
    <string name="licenses">Licenses</string>

    <string name="terms_body"><![CDATA[
        By using Velociraptor, you absolve the developer, speed limit providers, and all other parties of any responsibility
        for accidents, legal consequences, and all other outcomes. The data presented by Velociraptor, including speed limits and current speed,
        is not guaranteed to be accurate. This app is not affiliated or endorsed by OpenStreetMap, HERE, TomTom, or Sygic. All trademarks
        belong to their respective owners.<br/><br/>

        <b>Please pay attention to the road and use with care.</b>
     ]]></string>

    <string name="accept">Accept</string>
    <string name="terms">Terms</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_warning">Open Velociraptor to accept the terms of use</string>

    <!--Speed limit providers-->
    <string name="speed_limit_providers">Speed limit providers</string>

    <string name="subscribe_placeholder">Subscribe (7-day free trial)</string>

    <string name="here_provider">HERE Maps</string>
    <string name="here_desc">Subscribe for %s (7-day free trial)</string>

    <string name="tomtom_provider">TomTom Maps</string>
    <string name="tomtom_desc">Subscribe for %s (7-day free trial)</string>

    <string name="openstreetmap">OpenStreetMap</string>
    <string name="share_link">Share Link</string>
    <string name="openstreetmap_desc">Free. Donate to support the OSM project:</string>
    <string name="donate">Donate</string>
    <string name="osm_edit">Visit %s on your computer to add/edit speed limits</string>
    <string name="open_link_failed">Unable to open link. Please manually go to %s.</string>

    <string name="edit_data">Edit Data</string>
    <string name="subscribe">Subscribe</string>
    <string name="subscribed">Subscribed</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="coverage">Coverage</string>


    <!--Activation Settings-->
    <string name="show_in_apps">Auto-launch in these apps</string>

    <string name="persistent_notification_controls">Show notification controls</string>
    <string name="controls_notif_title">Velociraptor controls</string>
    <string name="controls_notif_desc">Show or hide the speed limit monitor</string>

    <string name="gmaps_only_nav">Google Maps: Only when navigating</string>
    <string name="gmaps_only_nav_notif_access">To use this feature, Velociraptor needs Notification Access to check when Google Maps navigation is open</string>
    <string name="open_settings_failed_notif_access">Unable to open settings. Please manually enable the \"Notification access\" setting for Velociraptor.</string>

    <!--App selection-->
    <string name="select_apps">Select apps</string>
    <string name="show_map_apps">Show map apps</string>


    <!---Advanced settings-->
    <string name="advanced">Advanced</string>
    <string name="debugging_stats">Stats for nerds/debugging</string>
    <string name="clear_cache">Clear speed limit cache</string>
    <string name="cache_cleared">Cache cleared!</string>

    <!--Changelog-->
    <string name="changelog">Changelog</string>
    <string name="rate">Rate</string>
    <string name="support">Support</string>


    <!--Support development-->
    <string name="support_development">Support development</string>
    <string name="in_app_unavailable">In-app billing not available</string>
    <string name="support_dev_dialog">Suggested amount is 1 USD per month. This is NOT necessary for using the app (but you will get a little badge here :) </string>
    <string name="per_month">%s per month</string>
    <string name="one_time">%s one-time</string>
    <string name="support_dev_dialog_badge">Thank you for your support!</string>

    <!--Notification Channels-->
    <string name="channel_toggles">Show/hide toggles</string>
    <string name="channel_warnings">Warnings</string>

    <string name="setup">Setup</string>
    <string name="providers">Providers</string>
    <string name="speed_limit_info_explanation">Speed limit information comes from these providers</string>
    <string name="speed_limit_info_explanation_desc">Coverage and accuracy vary. You can help contribute by adding or editing speed limit data.</string>
    <string name="permissions_explanation">To use Velociraptor, grant these permissions:</string>

</resources>
