<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/permissions_explanation"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <!--Draw Over Other Apps-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/image_floating_enabled"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@null"
            android:layout_marginEnd="16dp"
            tools:src="@drawable/ic_cross_red_40dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_floating_desc"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/button_floating_enabled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/open_settings_page"
        android:textColor="#FFFFFF" />

    <!--Access location-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginTop="16dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/image_location_enabled"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@null"
            android:layout_marginEnd="16dp"
            tools:src="@drawable/ic_cross_red_40dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_location_desc"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/button_location_enabled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/grant_permission"
        android:textColor="#FFFFFF" />

    <!--Notification permission-->

    <LinearLayout
        android:id="@+id/notifications_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        tools:ignore="UseCompoundDrawables"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/image_notifications_enabled"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@null"
            android:layout_marginEnd="16dp"
            tools:src="@drawable/ic_cross_red_40dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_notifications_desc"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/button_enable_notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:visibility="gone"
        android:text="@string/enable_notifications"
        android:textColor="#FFFFFF"
        tools:visibility="visible" />

    <!--Accessibility Service-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginTop="16dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/image_service_enabled"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@null"
            android:layout_marginEnd="16dp"
            tools:src="@drawable/ic_cross_red_40dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_accessibility_service_desc"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/button_enable_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/enable_accessibility_service"
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="12dp"
        android:paddingStart="16dp"
        android:layout_marginTop="8dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            app:srcCompat="@drawable/ic_lightbulb_outline_black_24dp"
            app:tint="@color/iconTint" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/troubleshoot_label"
            android:textSize="16sp"
            android:textStyle="italic"
            tools:ignore="RtlSymmetry" />

        <Button
            style="@style/Widget.Material3.Button.TextButton"
            android:id="@+id/button_troubleshoot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/troubleshoot" />

    </LinearLayout>

</LinearLayout>
