<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingEnd="@dimen/dialog_horizontal_padding"
    android:paddingStart="@dimen/dialog_horizontal_padding">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/tolerance_dialog_text"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:layout_width="2dp"
                android:layout_height="12dp"
                android:background="@color/contextColor"
                android:layout_gravity="center" />

            <com.google.android.material.slider.Slider
                android:id="@+id/slider_percent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stepSize="1"
                android:valueFrom="-25"
                android:valueTo="25" />

        </FrameLayout>

        <TextView
            android:id="@+id/text_percent"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            tools:text="5%" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:id="@+id/button_and"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:textAllCaps="true" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:id="@+id/button_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textAllCaps="true" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:layout_width="2dp"
                android:layout_height="12dp"
                android:background="@color/contextColor"
                android:layout_gravity="center" />

            <com.google.android.material.slider.Slider
                android:id="@+id/slider_constant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stepSize="1"
                android:valueFrom="-25"
                android:valueTo="25" />

        </FrameLayout>

        <TextView
            android:id="@+id/text_constant_unit"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            tools:text="5 km/h" />

    </LinearLayout>

</LinearLayout>
